# gaql-cli

./: .flake8  .gitignore  CHANGELOG.md  CODEOWNERS  Makefile  README.md  pyproject.toml
gaql/: __init__.py  main.py
gaql/client/: commands.py
gaql/lib/: formatter.py  functional.py  lexer.py  output.py  repl.py  validation.py
gaql/lib/click_decorators/: state.py
gaql/lib/google_clients/: config.py  google_ads_service.py  queries.py  query_client.py
gaql/lib/google_clients/completion/: account.py  accounts_completer.py  autocompletions.py  command_completer.py  completer.py  google_completer.py  trie.py
gaql/tooling/: autocomplete_generator.py
gaql/tools/: commands.py  queries.py
