[build-system]
requires = ["poetry>=1.6"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "gaql"
version = "1.12.0"
description = "A command line interface to the Google Ads Query Language (GAQL). Run with `gaql` or `gaql-tools`"

authors = [
  "Ben Ryves <bryves@gmail.com>"
]

readme = 'README.md'
repository = 'https://github.com/getyourguide/gaql-cli'
homepage = 'https://github.com/getyourguide/gaql-cli'

keywords = ['gaql', 'google-ads', 'cli']

[tool.poetry.scripts]
gaql = 'gaql.client.commands:cli'
gaql-tools = 'gaql.tools.commands:tools'

[tool.poetry.dependencies]
python = ">=3.9, <3.14" # Google Ads requirements
toml = "^0.10.1"

google-ads={ version = "26.0.0" }
click={ version = "^8.0.3" }
prompt_toolkit={ version = "^3.0.22" }
pygments={ version = "^2.10.0" }
certifi = "2025.1.31"

[tool.poetry.dev-dependencies]
black = "^25.1"
flake8 = "^7.1.2"
